--- a/css/analisis.css
+++ b/css/analisis.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #fff;
+    background-color: #56A6D5;
     color: #333;
     margin: 0;
     padding: 0;
@@ -57,7 +57,7 @@ h1 {
 
 .section ul li span {
     display: block;
-    background-color: #ffa500;
+    background-color: #FF5026;
     padding: 5px;
     border-radius: 5px;
     color: #fff;
@@ -70,7 +70,7 @@ h1 {
 
 .reportes p span {
     display: block;
-    background-color: #ffa500;
+    background-color: #FF5026;
     padding: 5px;
     border-radius: 5px;
     color: #fff;
